# notes-app-yew

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  stylesheet.css  tailwind.config.js
.github/workflows/: main.yml  new_main.yml
src/: components.rs  main.rs  routes.rs  store.rs  stylesheet.css
src/components/: note_editor.rs  note_line.rs  notes_panel.rs
