[package]
name = "notes-app-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
chrono = "0.4.23"
web-sys = {version = "0.3.61" , features = ["HtmlDivElement", "HtmlTextAreaElement", "HtmlInputElement"]}
wasm-bindgen =  "0.2.84"
wasm-logger = "0.2.0"
log = "0.4.17"